Name:                   meibo
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.swlab.cs.okayama-u.ac.jp/~nom/lect/p2/
Synopsis:               Meibo
Description:            Meibo
Category:               Application
Cabal-Version:          >= 1.6
Build-Type:             Simple
Data-Files:             test/sample.csv

Executable meibo
  HS-Source-Dirs:       src
  Main-Is:              Main.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , containers
                      , parsec
  Other-Modules:        CSVParser
                        Command
                        CommandParser
                        Person
                        Types
                        Utils

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/okayama-u.git
