Name:                   meibo
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Homepage:               http://www.swlab.cs.okayama-u.ac.jp/~nom/lect/p2/
Synopsis:               Meibo
Description:            Meibo
Category:               Application
Cabal-Version:          >= 1.10
Build-Type:             Simple
Data-Files:             test/sample.csv

Executable meibo
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  Main-Is:              Main.hs
  GHC-Options:          -Wall
  Build-Depends:        base >= 4.0 && < 5
                      , containers
                      , parsec
  Other-Modules:        CSVParser
                        Command
                        CommandParser
                        Person
                        Types
                        Utils

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  HS-Source-Dirs:       test
  Ghc-Options:          -threaded -Wall
  Main-Is:              doctests.hs
  Build-Depends:        base
                      , doctest >= 0.9.3

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/okayama-u.git
